Chinh sua nhap gia tien o BT3 va hoan thanh 2 yeu cau dau tien o BT4